# AI-STORYBOOK

./: .gitignore  DIRECTORY_STRUCTURE.md  app.py  gist_to_story.py  image_generator.py  main.py  pdf_generator.py  pyproject.toml  requirements.txt  split_pages.py  test.py
static/pages/: page_1.json  page_2.json  page_3.json  page_4.json  page_5.json  page_6.json  page_7.json  page_8.json
static/stories/story_8768a39b/: metadata.json  page_1.json  page_2.json  page_3.json  page_4.json  page_5.json  story.json
static/stories/story_9c423e01/: metadata.json  page_1.json  page_2.json  page_3.json  page_4.json  page_5.json  page_6.json  story.json
stories/: metadata.json  page_1.json  page_2.json  page_3.json  page_4.json  page_5.json  page_6.json  page_7.json  story.json
templates/: index.html
